versions/v2.15/modules/en/pages/cluster-deployment/node-requirements.adoc
= Node Requirements for {rancher-product-name} Managed Clusters
:page-languages: [en, de, es, fr, ja, pt, zh]
:revdate: 2026-07-14
:page-revdate: {revdate}
:page-community-path: how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/node-requirements-for-rancher-managed-clusters.adoc 
:page-product-path: cluster-deployment/node-requirements.adoc
ifeval::["{build-type}" != "community"]
:xref-use-windows-clusters: xref:cluster-deployment/custom-clusters/windows/use-windows-clusters.adoc
:xref-launch-k8s-with-rancher: xref:cluster-deployment/launch-kubernetes-with-rancher.adoc
:xref-install-reqs: xref:installation-and-upgrade/requirements/requirements.adoc
:xref-cluster-deployment: xref:cluster-deployment/cluster-deployment.adoc
:xref-security-overview: xref:security/security-overview.adoc
:xref-port-reqs: xref:installation-and-upgrade/requirements/port-requirements.adoc
:xref-provisioning-drivers: xref:rancher-admin/global-configuration/provisioning-drivers/provisioning-drivers.adoc
:xref-rancher-on-arm64: xref:rancher-admin/experimental-features/rancher-on-arm64.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-use-windows-clusters: xref:how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/use-windows-clusters/index.adoc
:xref-launch-k8s-with-rancher: xref:how-to-guides/new-user-guides/launch-kubernetes-with-rancher/index.adoc
:xref-install-reqs: xref:getting-started/installation-and-upgrade/installation-requirements/index.adoc 
:xref-cluster-deployment: xref:how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/index.adoc
:xref-security-overview: xref:reference-guides/rancher-security/index.adoc
:xref-port-reqs: xref:getting-started/installation-and-upgrade/installation-requirements/port-requirements.adoc
:xref-provisioning-drivers: xref:how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/about-provisioning-drivers/index.adoc
:xref-rancher-on-arm64: xref:how-to-guides/advanced-user-guides/enable-experimental-features/rancher-on-arm64.adoc
endif::[]

This page describes the requirements for the Rancher managed Kubernetes clusters where your apps and services will be installed. These downstream clusters should be separate from the three-node cluster running Rancher.

[NOTE]
====

If Rancher is installed on a high-availability Kubernetes cluster, the Rancher server three-node cluster and downstream clusters have different requirements. For Rancher installation requirements, refer to the node requirements in the {xref-install-reqs}[installation section.]
====

[#_operating_systems_and_container_runtime_requirements]
== Operating Systems and Container Runtime Requirements

To provision downstream Kubernetes clusters with Rancher, all host nodes must meet specific operating system, CPU architecture, and container runtime requirements.

[#_operating_systems_and_cpu_architectures]
=== Operating Systems and CPU Architectures

Control plane and etcd nodes in downstream Kubernetes clusters managed by Rancher must run Linux. Worker nodes may run either Linux or Windows Server.

* *Linux Nodes*: Required for `etcd` and `controlplane` nodes. Optional for `worker` nodes.
** *Supported Architectures*: `x86_64`, `ARM64`, or mixed-architecture clusters.
* *Windows Server Nodes*: Supported for `worker` nodes only (see <<_windows_nodes,Windows Server Worker Nodes>>).
** *Supported Architectures*: `x86_64` only.

For a complete list of OS versions tested and validated with this release, see the https://rancher.com/support-maintenance-terms/[Support Maintenance Terms].

[NOTE]
====
ARM64 and mixed-architecture support applies exclusively to Linux nodes. Windows Server worker nodes do not support ARM64.
====

[#_container_runtime_requirements]
=== Container Runtime Requirements

Each host node requires a Container Runtime Interface (CRI)-compliant runtime to run cluster components and workloads. The required runtime depends on your Kubernetes engine:

* *RKE2 & K3s Clusters*: Runtimes (typically `containerd`) come pre-packaged with the installation binaries. No prior runtime installation is required on the host.
* *Hosted / Registered Clusters (EKS, GKE, AKS, etc.)*: Use the cloud provider's default CRI-compliant runtime (such as `containerd` or `CRI-O`).

[#_oracle_linux_and_rhel_derived_linux_nodes]
=== Oracle Linux and RHEL Derived Linux Nodes

Some distributions of Linux derived from RHEL, including Oracle Linux, may have default firewall rules that block communication with Helm. We recommend disabling firewalld. For Kubernetes 1.19, firewalld must be turned off.

[NOTE]
====

In RHEL 8.4, two extra services are included on the NetworkManager: `nm-cloud-setup.service` and `nm-cloud-setup.timer`. These services add a routing table that interferes with the CNI plugin's configuration. If these services are enabled, you must disable them using the command below, and then reboot the node to restore connectivity:

[,shell]
----
   systemctl disable nm-cloud-setup.service nm-cloud-setup.timer
   reboot
----
====


[#_suse_linux_nodes]
=== SUSE Linux Nodes

SUSE Linux may have a firewall that blocks all ports by default. In that situation, follow {xref-port-reqs}#_opening_suse_linux_ports[these steps] to open the ports needed for adding a host to a custom cluster.

[#_flatcar_container_linux_nodes]
=== Flatcar Container Linux Nodes

When {xref-launch-k8s-with-rancher}[Launching Kubernetes with Rancher] using Flatcar Container Linux nodes, it is required to use the following configuration in the Cluster Config File.

[tabs]
======
Canal::
+
--
[,yaml]
----
rancher_kubernetes_engine_config:
  network:
    plugin: canal
    options:
      canal_flex_volume_plugin_dir: /opt/kubernetes/kubelet-plugins/volume/exec/nodeagent~uds
      flannel_backend_type: vxlan

  services:
    kube-controller:
      extra_args:
        flex-volume-plugin-dir: /opt/kubernetes/kubelet-plugins/volume/exec/
----
--

Calico::
+
--
[,yaml]
----
rancher_kubernetes_engine_config:
  network:
    plugin: calico
    options:
      calico_flex_volume_plugin_dir: /opt/kubernetes/kubelet-plugins/volume/exec/nodeagent~uds
      flannel_backend_type: vxlan

  services:
    kube-controller:
      extra_args:
        flex-volume-plugin-dir: /opt/kubernetes/kubelet-plugins/volume/exec/
----
--
======

It is also required to enable the Docker service, you can enable the Docker service using the following command:

[,shell]
----
systemctl enable docker.service
----

The Docker service is enabled automatically when using {xref-provisioning-drivers}#_node_drivers[Node Drivers].

[#_windows_nodes]
=== Windows Nodes

Nodes with Windows Server must run Docker Enterprise Edition.

Windows nodes can be used for worker nodes only. See {xref-use-windows-clusters}[Configuring Custom Clusters for Windows]

[#_hardware_requirements]
== Hardware Requirements

The hardware requirements for nodes with the `worker` role mostly depend on your workloads. The minimum to run the Kubernetes node components is 1 CPU (core) and 1GB of memory.

Regarding CPU and memory, it is recommended that the different planes of Kubernetes clusters (etcd, controlplane, and workers) should be hosted on different nodes so that they can scale separately from each other.

For hardware recommendations for large Kubernetes clusters, refer to the official Kubernetes documentation on https://kubernetes.io/docs/setup/best-practices/cluster-large/[building large clusters.]

For hardware recommendations for etcd clusters in production, refer to the official https://etcd.io/docs/v3.5/op-guide/hardware/[etcd documentation.]

[#_networking_requirements]
== Networking Requirements

For a production cluster, we recommend that you restrict traffic by opening only the ports defined in the port requirements below.

The ports required to be open are different depending on how the user cluster is launched. Each of the sections below list the ports that need to be opened for different {xref-cluster-deployment}[cluster creation options].

For a breakdown of the port requirements for etcd nodes, controlplane nodes, and worker nodes in a Kubernetes cluster, refer to the https://rancher.com/docs/rke/latest/en/os/#ports[port requirements for the Rancher Kubernetes Engine.]

Details on which ports are used in each situation are found under {xref-port-reqs}#_downstream_kubernetes_cluster_nodes[Downstream Cluster Port Requirements].

[#_ipv6_address_requirements]
=== IPv6 Address Requirements

Rancher supports clusters configured with IPv4-only, IPv6-only, or dual-stack networking.

You must provision each node with at least one valid IPv4 address, one IPv6 address, or both, according to the cluster networking configuration.

For IPv6-only environments, ensure you correctly configure the operating system and that the `/etc/hosts` file includes a valid localhost entry, for example:

[source,shell]
----
::1       localhost
----

[CAUTION]
====

You should never register a node with the same hostname or IP address as an existing node. Doing so causes RKE to prevent the node from joining, and provisioning to hang. This can occur for both node driver and custom clusters. If a node must reuse a hostname or IP of an existing node, you must set the `hostname_override` https://rke.docs.rancher.com/config-options/nodes#overriding-the-hostname[RKE option] before registering the node, so that it can join correctly.
====


[#_optional_security_considerations]
== Optional: Security Considerations

If you want to provision a Kubernetes cluster that is compliant with the CIS (Center for Internet Security) Kubernetes Benchmark, we recommend to following our hardening guide to configure your nodes before installing Kubernetes.

For more information on the hardening guide and details on which version of the guide corresponds to your Rancher and Kubernetes versions, refer to the {xref-security-overview}#_rancher_hardening_guide[security section.]
